js/src/tests/test262/language/import/import-defer/errors/get-self-while-defer-evaluating/dep_FIXTURE.js
import
defer
*
as
ns
from
"
.
/
dep_FIXTURE
.
js
"
;
try
{
ns
.
foo
;
}
catch
(
error
)
{
globalThis
[
"
error
on
ns
.
foo
"
]
=
error
;
}
